--- a/_config.yml
+++ b/_config.yml
@@ -117,7 +117,7 @@ author:
   avatar           : # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
   bio              : "I am **coding** man."
   location         : "South"
-  email            :
+  email            : "iregg413@gmail.com"
   links:
     - label: "Email"
       icon: "fas fa-fw fa-envelope-square"
