--- a/_config.yml
+++ b/_config.yml
@@ -153,9 +153,9 @@ footer:
     - label: "GitLab"
       icon: "fab fa-fw fa-gitlab"
       # url:
-    - label: "Bitbucket"
-      icon: "fab fa-fw fa-bitbucket"
-      # url:
+    - label: "Chrome"
+      icon: "chrome"
+      url: "https://www.google.com/"
     - label: "Instagram"
       icon: "fab fa-fw fa-instagram"
       # url:
