--- a/_config.yml
+++ b/_config.yml
@@ -338,6 +338,7 @@ defaults:
       share: true
       show_date: true
       date_format: "%Y-%m-%d"
+      read_time: true
   # _portfolio
   - scope:
       path: ""
