--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -2,8 +2,8 @@
 main:
   - title: "Configuration"
     url: "https://mmistakes.github.io/minimal-mistakes/docs/configuration/#theme"
-  #- title: "About"
-    url: https://mmistakes.github.io/minimal-mistakes/about/
+  - title: "Invite Wdding"
+    url: "https://invitewedding.p-e.kr/20251129"
   #- title: "Sample Posts"
     url: https://iregg.github.io/header-image-overlay/
   #- title: "News"
