--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -2,7 +2,7 @@
 main:
   - title: "Configuration"
     url: "https://mmistakes.github.io/minimal-mistakes/docs/configuration/#theme"
-  - title: "Invite Wdding"
+  - title: "Invite Wedding"
     url: "https://invitewedding.p-e.kr/20251129"
   #- title: "Sample Posts"
     url: https://iregg.github.io/header-image-overlay/
