--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -3,7 +3,7 @@ main:
   - title: "Configuration"
     url: "https://mmistakes.github.io/minimal-mistakes/docs/configuration/#theme"
   - title: "Invite Wedding"
-    url: "https://invitewedding.p-e.kr/20251129"
+    url: https://invitewedding.p-e.kr/20251129
   #- title: "Sample Posts"
     url: https://iregg.github.io/header-image-overlay/
   #- title: "News"
