--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -107,9 +107,9 @@ sidebar-news:
 sidebar-notes:
   - title: "URL Note"
     children:
-      - title: "Business URL"
+      - title: "- Business URL"
         url: https://bjlim413.github.io/notes/1_business_url_note/
-      - title: "Movie URL"
+      - title: "- Movie URL"
         url: https://bjlim413.github.io/notes/2_movie_url_note/
       - title: "만화 URL"
         url: https://iregg.github.io/notes/3_cartoon_url_note/
