--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -111,8 +111,8 @@ sidebar-notes:
         url: https://bjlim413.github.io/notes/1_business_url_note/
       - title: "- Movie URL"
         url: https://bjlim413.github.io/notes/2_movie_url_note/
-      - title: "만화 URL"
-        url: https://iregg.github.io/notes/3_cartoon_url_note/
+      - title: "Cartoon URL"
+        url: https://bjlim413.github.io/notes/3_cartoon_url_note/
       - title: "공부 URL"
         url: https://iregg.github.io/notes/4_study_url_note/
       - title: "유투브 URL"
