--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -2,8 +2,8 @@
 main:
   - title: "Configuration"
     url: "https://mmistakes.github.io/minimal-mistakes/docs/configuration/#theme"
-  - title: "Invite Wedding"
-    url: https://invitewedding.p-e.kr/20251129
+  #- title: "Invite Wedding"
+    #url: https://invitewedding.p-e.kr/20251129
   - title : "Notes"
     url : https://bjlim413.github.io/notes/
   #- title: "Sample Posts"
