--- a/_config.yml
+++ b/_config.yml
@@ -338,7 +338,7 @@ defaults:
       #author_profile: true
       #read_time: true
       comments: # true
-      share: true
+      #share: true
       #show_date: true
       #date_format: "%Y-%m-%d"
       #read_time: true
