--- a/_config.yml
+++ b/_config.yml
@@ -141,7 +141,7 @@ analytics:
 # Site Footer
 footer:
   links:
-    - label: "KakaoTalk"
+    - label: "Worship"
       icon: "fas fa-comment"  # 비슷한 아이콘 사용 (말풍선)
       url: "https://bjlim413.github.io/worship/pray-for-grandfather/" # "https://open.kakao.com/o/xxxxx"  # 오픈채팅 링크나 카카오 링크
     #- label: "Twitter"
