--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -6,6 +6,8 @@ main:
     #url: https://invitewedding.p-e.kr/20251129
   - title : "Notes"
     url : https://bjlim413.github.io/notes/
+  - title : "Portfolio"
+    url : 
   #- title: "Sample Posts"
     #url: https://iregg.github.io/header-image-overlay/
   #- title: "News"
