--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -7,7 +7,7 @@ main:
   - title : "Notes"
     url : https://bjlim413.github.io/notes/
   - title : "Portfolio"
-    url : 
+    url : https://bjlim413.github.io/portfolio/
   #- title: "Sample Posts"
     #url: https://iregg.github.io/header-image-overlay/
   #- title: "News"
