--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -149,3 +149,15 @@ sidebar-notes:
         url: https://bjlim413.github.io/notes/16_phenomenon_cause_solvingMethod_note/
       - title: "Diary"
         url: https://bjlim413.github.io/notes/17_diary_note/
+
+# news-2025-08 links
+news-2025-08:
+  - title: "1st week"
+    children:
+      - title: "2025-08-01"
+        url: https://mmistakes.github.io/minimal-mistakes/docs/configuration/#theme
+  - title: "2nd week"
+    children:
+      - title: "2025-08-07(목)"
+        url: https://bjlim413.github.io/news/2025/2025-08/2025-08-07-news/
+      
