--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -160,4 +160,7 @@ news-2025-08:
     children:
       - title: "2025-08-07(목)"
         url: https://bjlim413.github.io/news/2025/2025-08/2025-08-07-news/
+      - title: "2025-08-08(금)"
+        url: https://bjlim413.github.io/news/2025/2025-08/2025-08-08-news/
       
+
