--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -166,5 +166,7 @@ news-2025-08:
     children:      
       - title: "2025-08-11(월)"
         url: https://bjlim413.github.io/news/2025/2025-08/2025-08-11-news/
+      - title: "2025-08-12(화)"
+        url: https://bjlim413.github.io/news/2025/2025-08/2025-08-12-news/
 
 
