--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -168,5 +168,8 @@ news-2025-08:
         url: https://bjlim413.github.io/news/2025/2025-08/2025-08-11-news/
       - title: "2025-08-12(화)"
         url: https://bjlim413.github.io/news/2025/2025-08/2025-08-12-news/
+      - title: "2025-08-13(수)"
+        url: https://bjlim413.github.io/news/2025/2025-08/2025-08-13-news/
+
 
 
