--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -170,6 +170,11 @@ news-2025-08:
         url: https://bjlim413.github.io/news/2025/2025-08/2025-08-12-news/
       - title: "2025-08-13(수)"
         url: https://bjlim413.github.io/news/2025/2025-08/2025-08-13-news/
+      - title: "2025-08-14(목)"
+        url: https://bjlim413.github.io/news/2025/2025-08/2025-08-14-news/
+      - title: "2025-08-15(금) 광복절"
+        url: https://bjlim413.github.io/news/2025/2025-08/2025-08-15-news/
+
 
 
 
