--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -174,6 +174,9 @@ news-2025-08:
         url: https://bjlim413.github.io/news/2025/2025-08/2025-08-14-news/
       - title: "2025-08-15(금) 광복절"
         url: https://bjlim413.github.io/news/2025/2025-08/2025-08-15-news/
+      - title: "2025-08-16(토)"
+        url: https://bjlim413.github.io/news/2025/2025-08/2025-08-16-news/
+
 
 
 
