--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -180,6 +180,11 @@ news-2025-08:
     children:      
       - title: "2025-08-18(월)"
         url: https://bjlim413.github.io/news/2025/2025-08/2025-08-18-news/
+      - title: "2025-08-19(화)"
+        url: https://bjlim413.github.io/news/2025/2025-08/2025-08-19-news/
+      - title: "2025-08-20(수)"
+        url: https://bjlim413.github.io/news/2025/2025-08/2025-08-20-news/
+
 
 
 
