--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -184,6 +184,9 @@ news-2025-08:
         url: https://bjlim413.github.io/news/2025/2025-08/2025-08-19-news/
       - title: "2025-08-20(수)"
         url: https://bjlim413.github.io/news/2025/2025-08/2025-08-20-news/
+      - title: "2025-08-21(목)"
+        url: https://bjlim413.github.io/news/2025/2025-08/2025-08-21-news/
+
 
 
 
