--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -186,8 +186,13 @@ news-2025-08:
         url: https://bjlim413.github.io/news/2025/2025-08/2025-08-20-news/
       - title: "2025-08-21(목)"
         url: https://bjlim413.github.io/news/2025/2025-08/2025-08-21-news/
-
-
+      - title: "2025-08-22(금)"
+        url: https://bjlim413.github.io/news/2025/2025-08/2025-08-22-news/
+  - title: "5th week"
+    children:      
+      - title: "2025-08-25(월)"
+        url: https://bjlim413.github.io/news/2025/2025-08/2025-08-25-news/
+      
 
 
 
