--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -192,6 +192,8 @@ news-2025-08:
     children:      
       - title: "2025-08-25(월)"
         url: https://bjlim413.github.io/news/2025/2025-08/2025-08-25-news/
+      - title: "2025-08-28(목)"
+        url: https://bjlim413.github.io/news/2025/2025-08/2025-08-28-news/
       
 
 
