--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -226,5 +226,9 @@ news-2025-10:
         url: https://bjlim413.github.io/news/2025/2025-10/2025-10-06-news/
       - title: "2025-10-07(화)"
         url: https://bjlim413.github.io/news/2025/2025-10/2025-10-07-news/
-
-
+      - title: "2025-10-08(수)"
+        url: https://bjlim413.github.io/news/2025/2025-10/2025-10-08-news/
+      - title: "2025-10-09(목)"
+        url: https://bjlim413.github.io/news/2025/2025-10/2025-10-09-news/
+      - title: "2025-10-10(금)"
+        url: https://bjlim413.github.io/news/2025/2025-10/2025-10-10-news/
