--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -150,6 +150,23 @@ sidebar-notes:
       - title: "Diary"
         url: https://bjlim413.github.io/notes/17_diary_note/
 
+# news-2026-01 links
+news-2026-01:
+  - title: "1st week"
+    children:
+      - title: "2026-01-01(목)"
+        url: https://bjlim413.github.io/news/2026/2026-01/2026-01-01-news/
+      - title: "2026-01-02(금)"
+        url: https://bjlim413.github.io/news/2026/2026-01/2026-01-02-news/
+      - title: "2026-01-03(토)"
+        url: https://bjlim413.github.io/news/2026/2026-01/2026-01-03-news/
+  - title: "2nd week"
+    children:
+      - title: "2026-01-04(일)"
+        url: https://bjlim413.github.io/news/2026/2026-01/2026-01-04-news/
+      - title: "2026-01-05(월)"
+        url: https://bjlim413.github.io/news/2026/2026-01/2026-01-05-news/
+
 # news-2025-08 links
 news-2025-08:
   - title: "1st week"
