--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -166,6 +166,8 @@ news-2026-01:
         url: https://bjlim413.github.io/news/2026/2026-01/2026-01-04-news/
       - title: "2026-01-05(월)"
         url: https://bjlim413.github.io/news/2026/2026-01/2026-01-05-news/
+      - title: "2026-01-06(화)"
+        url: https://bjlim413.github.io/news/2026/2026-01/2026-01-06-news/
 
 # news-2025-08 links
 news-2025-08:
