--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -168,6 +168,8 @@ news-2026-01:
         url: https://bjlim413.github.io/news/2026/2026-01/2026-01-05-news/
       - title: "2026-01-06(화)"
         url: https://bjlim413.github.io/news/2026/2026-01/2026-01-06-news/
+      - title: "2026-01-07(수)"
+        url: https://bjlim413.github.io/news/2026/2026-01/2026-01-07-news/
 
 # news-2025-08 links
 news-2025-08:
