--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -172,6 +172,8 @@ news-2026-01:
         url: https://bjlim413.github.io/news/2026/2026-01/2026-01-07-news/
       - title: "2026-01-08(목)"
         url: https://bjlim413.github.io/news/2026/2026-01/2026-01-08-news/
+      - title: "2026-01-09(금)"
+        url: https://bjlim413.github.io/news/2026/2026-01/2026-01-09-news/
 
 # news-2025-08 links
 news-2025-08:
