--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -174,6 +174,12 @@ news-2026-01:
         url: https://bjlim413.github.io/news/2026/2026-01/2026-01-08-news/
       - title: "2026-01-09(금)"
         url: https://bjlim413.github.io/news/2026/2026-01/2026-01-09-news/
+      - title: "2026-01-10(토)"
+        url: https://bjlim413.github.io/news/2026/2026-01/2026-01-10-news/
+  - title: "3rd week"
+    children:
+      - title: "2026-01-11(일)"
+        url: https://bjlim413.github.io/news/2026/2026-01/2026-01-11-news/
 
 # news-2025-08 links
 news-2025-08:
