--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -180,6 +180,8 @@ news-2026-01:
     children:
       - title: "2026-01-11(일)"
         url: https://bjlim413.github.io/news/2026/2026-01/2026-01-11-news/
+      - title: "2026-01-12(월)"
+        url: https://bjlim413.github.io/news/2026/2026-01/2026-01-12-news/
 
 # news-2025-08 links
 news-2025-08:
