--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -182,6 +182,11 @@ news-2026-01:
         url: https://bjlim413.github.io/news/2026/2026-01/2026-01-11-news/
       - title: "2026-01-12(월)"
         url: https://bjlim413.github.io/news/2026/2026-01/2026-01-12-news/
+      - title: "2026-01-13(화)"
+        url: https://bjlim413.github.io/news/2026/2026-01/2026-01-13-news/
+      - title: "2026-01-14(수)"
+        url: https://bjlim413.github.io/news/2026/2026-01/2026-01-14-news/
+
 
 # news-2025-08 links
 news-2025-08:
