--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -186,6 +186,8 @@ news-2026-01:
         url: https://bjlim413.github.io/news/2026/2026-01/2026-01-13-news/
       - title: "2026-01-14(수)"
         url: https://bjlim413.github.io/news/2026/2026-01/2026-01-14-news/
+      - title: "2026-01-15(목)"
+        url: https://bjlim413.github.io/news/2026/2026-01/2026-01-15-news/
 
 
 # news-2025-08 links
