--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -188,6 +188,8 @@ news-2026-01:
         url: https://bjlim413.github.io/news/2026/2026-01/2026-01-14-news/
       - title: "2026-01-15(목)"
         url: https://bjlim413.github.io/news/2026/2026-01/2026-01-15-news/
+      - title: "2026-01-16(금)"
+        url: https://bjlim413.github.io/news/2026/2026-01/2026-01-16-news/
 
 
 # news-2025-08 links
