--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -192,6 +192,8 @@ news-2026-01:
         url: https://bjlim413.github.io/news/2026/2026-01/2026-01-16-news/
       - title: "2026-01-17(토)"
         url: https://bjlim413.github.io/news/2026/2026-01/2026-01-17-news/
+      - title: "2026-01-18(일)"
+        url: https://bjlim413.github.io/news/2026/2026-01/2026-01-18-news/
 
 
 # news-2025-08 links
