--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -200,6 +200,8 @@ news-2026-01:
         url: https://bjlim413.github.io/news/2026/2026-01/2026-01-19-news/
       - title: "2026-01-20(화)"
         url: https://bjlim413.github.io/news/2026/2026-01/2026-01-20-news/
+      - title: "2026-01-21(수)"
+        url: https://bjlim413.github.io/news/2026/2026-01/2026-01-21-news/
 
 
 # news-2025-08 links
