--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -204,6 +204,8 @@ news-2026-01:
         url: https://bjlim413.github.io/news/2026/2026-01/2026-01-21-news/
       - title: "2026-01-22(목)"
         url: https://bjlim413.github.io/news/2026/2026-01/2026-01-22-news/
+      - title: "2026-01-23(금)"
+        url: https://bjlim413.github.io/news/2026/2026-01/2026-01-23-news/
 
 
 # news-2025-08 links
