--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -212,6 +212,8 @@ news-2026-01:
     children:        
       - title: "2026-01-25(일)"
         url: https://bjlim413.github.io/news/2026/2026-01/2026-01-25-news/
+      - title: "2026-01-26(월)"
+        url: https://bjlim413.github.io/news/2026/2026-01/2026-01-26-news/
 
 # news-2025-08 links
 news-2025-08:
