--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -214,6 +214,8 @@ news-2026-01:
         url: https://bjlim413.github.io/news/2026/2026-01/2026-01-25-news/
       - title: "2026-01-26(월)"
         url: https://bjlim413.github.io/news/2026/2026-01/2026-01-26-news/
+      - title: "2026-01-27(화)"
+        url: https://bjlim413.github.io/news/2026/2026-01/2026-01-27-news/
 
 # news-2025-08 links
 news-2025-08:
