--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -216,6 +216,8 @@ news-2026-01:
         url: https://bjlim413.github.io/news/2026/2026-01/2026-01-26-news/
       - title: "2026-01-27(화)"
         url: https://bjlim413.github.io/news/2026/2026-01/2026-01-27-news/
+      - title: "2026-01-28(수)"
+        url: https://bjlim413.github.io/news/2026/2026-01/2026-01-28-news/
 
 # news-2025-08 links
 news-2025-08:
