--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -218,6 +218,8 @@ news-2026-01:
         url: https://bjlim413.github.io/news/2026/2026-01/2026-01-27-news/
       - title: "2026-01-28(수)"
         url: https://bjlim413.github.io/news/2026/2026-01/2026-01-28-news/
+      - title: "2026-01-29(목)"
+        url: https://bjlim413.github.io/news/2026/2026-01/2026-01-29-news/
 
 # news-2025-08 links
 news-2025-08:
