--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -220,6 +220,10 @@ news-2026-01:
         url: https://bjlim413.github.io/news/2026/2026-01/2026-01-28-news/
       - title: "2026-01-29(목)"
         url: https://bjlim413.github.io/news/2026/2026-01/2026-01-29-news/
+      - title: "2026-01-30(금)"
+        url: https://bjlim413.github.io/news/2026/2026-01/2026-01-30-news/
+      - title: "2026-01-31(토)"
+        url: https://bjlim413.github.io/news/2026/2026-01/2026-01-31-news/
 
 # news-2025-08 links
 news-2025-08:
