--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -156,6 +156,8 @@ news-2026-02:
     children:
       - title: "2026-02-01(일)"
         url: https://bjlim413.github.io/news/2026/2026-02/2026-02-01-news/
+      - title: "2026-02-02(월)"
+        url: https://bjlim413.github.io/news/2026/2026-02/2026-02-02-news/
         
 # news-2026-01 links
 news-2026-01:
