--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -158,6 +158,8 @@ news-2026-02:
         url: https://bjlim413.github.io/news/2026/2026-02/2026-02-01-news/
       - title: "2026-02-02(월)"
         url: https://bjlim413.github.io/news/2026/2026-02/2026-02-02-news/
+      - title: "2026-02-03(화)"
+        url: https://bjlim413.github.io/news/2026/2026-02/2026-02-03-news/
         
 # news-2026-01 links
 news-2026-01:
