--- a/_config.yml
+++ b/_config.yml
@@ -20,8 +20,8 @@ rtl                      : # true, false (default) # turns direction of the page
 title                    : "FCM Oracle"
 title_separator          : "-"
 subtitle                 : # site tagline that appears below site title in masthead
-name                     : # "Your Name"
-description              : # "An amazing website."
+name                     : "Your Name"
+description              : "An amazing website."
 url                      : "https://fcmoracle.github.io"
 baseurl                  : # the subpath of your site, e.g. "/blog"
 repository               : # GitHub username/repo-name e.g. "mmistakes/minimal-mistakes"
@@ -113,10 +113,10 @@ analytics:
 
 # Site Author
 author:
-  name             : "Your Name"
+  name             : # "Your Name"
   avatar           : # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
-  bio              : "I am an **amazing** person."
-  location         : "Somewhere"
+  bio              : # "I am an **amazing** person."
+  location         : # "Somewhere"
   email            :
   links:
     - label: "Email"
