--- a/_config.yml
+++ b/_config.yml
@@ -113,7 +113,7 @@ analytics:
 
 # Site Author
 author:
-  name             : # "Your Name"
+  name             : "AP"
   avatar           : # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
   bio              : # "I am an **amazing** person."
   location         : # "Somewhere"
@@ -137,6 +137,9 @@ author:
     - label: "Instagram"
       icon: "fab fa-fw fa-instagram"
       # url: "https://instagram.com/"
+
+author:
+  name             : "AR"
 
 # Site Footer
 footer:
