--- a/_config.yml
+++ b/_config.yml
@@ -113,10 +113,10 @@ analytics:
 
 # Site Author
 author:
-  name             : "AP"
+  name             : "FCM"
   avatar           : # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
-  bio              : # "I am an **amazing** person."
-  location         : # "Somewhere"
+  bio              : "What is **ORACLE** ?"
+  location         : "Somewhere Over the Rainbow"
   email            :
   links:
     - label: "Email"
