--- a/_config.yml
+++ b/_config.yml
@@ -116,6 +116,7 @@ author:
   name             : "FCM"
   avatar           : # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
   bio              : "What is **ORACLE** ?"
+  location         : "Oracle Forms Builder"
   location         : "PL/SQL Developer"
   email            :
   links:
