--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -160,6 +160,10 @@ news-2026-02:
         url: https://bjlim413.github.io/news/2026/2026-02/2026-02-02-news/
       - title: "2026-02-03(화)"
         url: https://bjlim413.github.io/news/2026/2026-02/2026-02-03-news/
+      - title: "2026-02-04(수)"
+        url: https://bjlim413.github.io/news/2026/2026-02/2026-02-04-news/
+      - title: "2026-02-05(목)"
+        url: https://bjlim413.github.io/news/2026/2026-02/2026-02-05-news/
         
 # news-2026-01 links
 news-2026-01:
