--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -164,6 +164,8 @@ news-2026-02:
         url: https://bjlim413.github.io/news/2026/2026-02/2026-02-04-news/
       - title: "2026-02-05(목)"
         url: https://bjlim413.github.io/news/2026/2026-02/2026-02-05-news/
+      - title: "2026-02-06(금)"
+        url: https://bjlim413.github.io/news/2026/2026-02/2026-02-06-news/
         
 # news-2026-01 links
 news-2026-01:
