--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -166,6 +166,8 @@ news-2026-02:
         url: https://bjlim413.github.io/news/2026/2026-02/2026-02-05-news/
       - title: "2026-02-06(금)"
         url: https://bjlim413.github.io/news/2026/2026-02/2026-02-06-news/
+      - title: "2026-02-07(토)"
+        url: https://bjlim413.github.io/news/2026/2026-02/2026-02-07-news/
         
 # news-2026-01 links
 news-2026-01:
