--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -172,6 +172,8 @@ news-2026-02:
     children:
       - title: "2026-02-08(일)"
         url: https://bjlim413.github.io/news/2026/2026-02/2026-02-08-news/
+      - title: "2026-02-09(월)"
+        url: https://bjlim413.github.io/news/2026/2026-02/2026-02-09-news/
         
 # news-2026-01 links
 news-2026-01:
