--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -174,6 +174,8 @@ news-2026-02:
         url: https://bjlim413.github.io/news/2026/2026-02/2026-02-08-news/
       - title: "2026-02-09(월)"
         url: https://bjlim413.github.io/news/2026/2026-02/2026-02-09-news/
+      - title: "2026-02-10(화)"
+        url: https://bjlim413.github.io/news/2026/2026-02/2026-02-10-news/
         
 # news-2026-01 links
 news-2026-01:
