--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -176,6 +176,8 @@ news-2026-02:
         url: https://bjlim413.github.io/news/2026/2026-02/2026-02-09-news/
       - title: "2026-02-10(화)"
         url: https://bjlim413.github.io/news/2026/2026-02/2026-02-10-news/
+      - title: "2026-02-11(수)"
+        url: https://bjlim413.github.io/news/2026/2026-02/2026-02-11-news/
         
 # news-2026-01 links
 news-2026-01:
