--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -178,6 +178,8 @@ news-2026-02:
         url: https://bjlim413.github.io/news/2026/2026-02/2026-02-10-news/
       - title: "2026-02-11(수)"
         url: https://bjlim413.github.io/news/2026/2026-02/2026-02-11-news/
+      - title: "2026-02-12(목)"
+        url: https://bjlim413.github.io/news/2026/2026-02/2026-02-12-news/
         
 # news-2026-01 links
 news-2026-01:
