--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -180,6 +180,8 @@ news-2026-02:
         url: https://bjlim413.github.io/news/2026/2026-02/2026-02-11-news/
       - title: "2026-02-12(목)"
         url: https://bjlim413.github.io/news/2026/2026-02/2026-02-12-news/
+      - title: "2026-02-13(금)"
+        url: https://bjlim413.github.io/news/2026/2026-02/2026-02-13-news/
         
 # news-2026-01 links
 news-2026-01:
