--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -188,6 +188,10 @@ news-2026-02:
     children:
       - title: "2026-02-15(일)"
         url: https://bjlim413.github.io/news/2026/2026-02/2026-02-15-news/
+      - title: "2026-02-16(월)"
+        url: https://bjlim413.github.io/news/2026/2026-02/2026-02-16-news/
+      - title: "2026-02-17(화)"
+        url: https://bjlim413.github.io/news/2026/2026-02/2026-02-17-news/
         
 # news-2026-01 links
 news-2026-01:
