--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -192,6 +192,10 @@ news-2026-02:
         url: https://bjlim413.github.io/news/2026/2026-02/2026-02-16-news/
       - title: "2026-02-17(화)"
         url: https://bjlim413.github.io/news/2026/2026-02/2026-02-17-news/
+      - title: "2026-02-18(수)"
+        url: https://bjlim413.github.io/news/2026/2026-02/2026-02-18-news/
+      - title: "2026-02-19(목)"
+        url: https://bjlim413.github.io/news/2026/2026-02/2026-02-19-news/
         
 # news-2026-01 links
 news-2026-01:
