--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -196,6 +196,8 @@ news-2026-02:
         url: https://bjlim413.github.io/news/2026/2026-02/2026-02-18-news/
       - title: "2026-02-19(목)"
         url: https://bjlim413.github.io/news/2026/2026-02/2026-02-19-news/
+      - title: "2026-02-20(금)"
+        url: https://bjlim413.github.io/news/2026/2026-02/2026-02-20-news/
         
 # news-2026-01 links
 news-2026-01:
